--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>layout 后台大布局 - Layui</title>
-    <link rel="stylesheet" href="../../static/layui/css/layui.css"></link>
-    <script src="../../static/js/jquery-3.3.1.js"></script>
+    <meta charset="utf-8"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"></meta>
+    <title>首页-后台</title>
+    <link rel="stylesheet" href="../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"></link>
+    <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css"></link>
+    <script src="../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
 </head>
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">银行理财管理系统后台</div>
-        <!-- 头部区域（可配合layui已有的水平导航） -->
-        <!--<ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="">控制台</a></li>
-            <li class="layui-nav-item"><a href="">商品管理</a></li>
-            <li class="layui-nav-item"><a href="">用户</a></li>
-            <li class="layui-nav-item">
-                <a href="javascript:;">其它系统</a>
-                <dl class="layui-nav-child">
-                    <dd><a href="">邮件管理</a></dd>
-                    <dd><a href="">消息管理</a></dd>
-                    <dd><a href="">授权管理</a></dd>
-                </dl>
-            </li>
-        </ul>-->
+
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
-                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img"></img>
                     管理员
                 </a>
                 <dl class="layui-nav-child">
@@ -47,14 +35,14 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;" ><i class="layui-icon" style="font-size: 18px; color: #e2e2e2;">&#xe613;</i> 用户管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" class="layui-col-md-offset2"> 所有用户</a></dd>
+                        <dd><a th:href="@{/user/list}" href="user/list.html" class="layui-col-md-offset2" target="target"> 所有用户</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon" style="font-size: 18px; color: #e2e2e2;">&#xe62d;</i>产品管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;" class="layui-col-md-offset2">理财项目</a></dd>
-                        <dd><a href="javascript:;" class="layui-col-md-offset2">理财产品</a></dd>
+                        <dd><a href="project/list.html" class="layui-col-md-offset2" target="target">理财项目</a></dd>
+                        <dd><a href="product/list.html" class="layui-col-md-offset2" target="target">理财产品</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -68,8 +56,20 @@
     </div>
 
     <div class="layui-body">
-        <!-- 内容主体区域 -->
-        <div style="padding: 15px;">内容主体区域</div>
+        <!--<div class="layui-tab admin-nav-card layui-tab-brief"
+             lay-filter="admin-tab">
+            <ul class="layui-tab-title">
+                <li class="layui-this"><i class="fa fa-dashboard"
+                                          aria-hidden="true"></i> <cite>首页</cite></li>
+            </ul>
+            <div class="layui-tab-content"
+                 style="min-height: 150px; padding: 5px 0 0 0;">
+                <div class="layui-tab-item layui-show">
+                    &lt;!&ndash;<iframe src="wecome.jsp"></iframe>&ndash;&gt;
+                </div>
+            </div>
+        </div>-->
+        <iframe name="target" frameborder="0" id="demoAdmin" style="width: 100%; height: 700px;"></iframe>
     </div>
 
     <div class="layui-footer">
@@ -77,8 +77,8 @@
         © layui.com - 底部固定区域
     </div>
 </div>
-<script src="../../static/layui/layui.js"></script>
-<script>
+<script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+<script th:inline="javascript" >
     //JavaScript代码区域
     layui.use(['element','layer'], function(){
         var element = layui.element
@@ -92,10 +92,10 @@
                 type: 2,
                 title: '用户登录',
                 maxmin: true,
-                skin: 'layui-layer-molv',
+                skin: 'layui-layer-lan',
                 shadeClose: true, //点击遮罩关闭层
                 area: ['400px', '280px'],
-                content: 'login.html'//弹框显示的url
+                content: 'user/login.html'//弹框显示的url
             });
         });
     });
