--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -8,9 +8,27 @@
     <script src="../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
 </head>
 <body>
-<div style="margin-top: 20px;margin-left: 20px">
+<!--<div style="margin-top: 20px;margin-left: 20px">
     <button id="add-user" class="layui-btn">添加用户</button>
-</div>
+</div>-->
+
+<blockquote class="layui-elem-quote quoteBox">
+    <form class="layui-form">
+        <div class="layui-inline">
+            <div class="layui-input-inline">
+                <input type="text" class="layui-input searchVal" placeholder="请输入搜索的内容" />
+            </div>
+            <a class="layui-btn search_btn" data-type="reload">搜索</a>
+        </div>
+        <div class="layui-inline">
+            <a class="layui-btn layui-btn-normal addNews_btn" id="add-user">添加用户</a>
+        </div>
+        <!--<div class="layui-inline">
+            <a class="layui-btn layui-btn-danger layui-btn-normal delAll_btn">批量删除</a>
+        </div>-->
+    </form>
+</blockquote>
+
 <table class="layui-table" lay-data="{width: 1100, height:500, url:'/user/list1', page:true, id:'idTest'}" lay-filter="demo">
     <thead>
     <tr>
@@ -80,7 +98,7 @@
                     type: 2,
                     maxmin: true,
                     title: '编辑用户',
-                    content: 'http://localhost:8899/user/toEdit?id='+data.id, //这里content是一个DOM，注意：最好该元素要存放在body最外层，否则可能被其它的相对元素所影响
+                    content: '/user/toEdit?id='+data.id, //这里content是一个DOM，注意：最好该元素要存放在body最外层，否则可能被其它的相对元素所影响
                     area: ['600px', '450px'],
                     offset: ['50px', '250px'],
                     success: function (layero, index) {
@@ -119,7 +137,7 @@
                 type: 2,
                 maxmin: true,
                 title: '添加用户',
-                content: 'http://localhost:8899/user/toAdd',
+                content: '/user/toAdd',
                 area: ['600px', '450px'],
                 offset: ['50px', '250px'],
                 success: function (layero, index) {
