--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -45,7 +45,7 @@
 
         <div class="layui-form-item">
             <div class="layui-input-block">
-                <button class="layui-btn" lay-submit="submit" lay-filter="formDemo">修改</button>
+                <button class="layui-btn" lay-submit="submit" lay-filter="formDemo">添加</button>
                 <button type="reset" class="layui-btn layui-btn-primary">取消</button>
             </div>
         </div>
