--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -16,7 +16,7 @@
     <form class="layui-form">
         <div class="layui-inline">
             <div class="layui-input-inline">
-                <input type="text" class="layui-input searchVal" placeholder="请输入搜索的内容" />
+                <input type="text" class="layui-input searchVal" placeholder="请输入用户姓名" />
             </div>
             <a class="layui-btn search_btn" data-type="reload">搜索</a>
         </div>
@@ -29,47 +29,51 @@
     </form>
 </blockquote>
 
-<table class="layui-table" lay-data="{width: 1100, height:500, url:'/user/list1', page:true, id:'idTest'}" lay-filter="demo">
+<!--<table class="layui-table" lay-data="{width: 1100, height:500, url:'/user/list1', page:true, id:'idTest'}" lay-filter="demo">
     <thead>
     <tr>
         <th lay-data="{field:'id', width:80, sort: true, fixed: true}">ID</th>
         <th id="name" lay-data="{field:'name', width:130, sort: true}">姓名</th>
         <th lay-data="{field:'idCard', width:180}">身份证</th>
-        <th lay-data="{field:'address', width:160}">住址</th>
+        <th lay-data="{field:'address', width:160, align:'center'}">住址</th>
         <th lay-data="{field:'account', width:180}">账户</th>
         <th lay-data="{field:'phone', width:140, sort: true}">电话</th>
-        <!--<th lay-data="{field:'createTime', width:120}">创建时间</th>-->
+        &lt;!&ndash;<th lay-data="{field:'createTime', width:120}">创建时间</th>&ndash;&gt;
         <th lay-data="{fixed: 'right', width:200, align:'center', toolbar: '#barDemo'}">操作</th>
     </tr>
     </thead>
-</table>
+</table>-->
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit" id="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+<script src="../static/js/user/list.js" th:src="@{/js/user/list.js}"></script>
 <script th:inline="javascript">
     //JavaScript代码区域
-    layui.use(['table','layer'], function(){
+    /*layui.use(['table','layer'], function(){
         var table = layui.table,
-            layer = layui.layer;
+            layer = layui.layer,
+            $ = layui.jquery;
 
-        /*table.render({
-            elem: '#test'
+       var tableIns = table.render({
+            elem: '#test1'
             ,url:'/user/list1'
             ,cellMinWidth: 100
+            ,id:"idTest"
             ,cols: [[
                  {field:'id', width:80, title: 'ID', sort: true}
-                ,{field:'name', width:120, title: '姓名', sort: true}
-                ,{field:'idCard', width:120, title: '身份证'}
+                ,{field:'name', width:130, title: '姓名', sort: true}
+                ,{field:'idCard', width:180, title: '身份证'}
+                ,{field:'address', width:160, title: '住址', sort: true}
                 ,{field:'account', width:120, title: '账户'}
                 ,{field:'phone', title: '电话', width: 120}
-                ,{field:'address', width:120, title: '住址', sort: true}
-                ,{field:'createTime', width:120, title: '创建时间'}
+                //,{field:'createTime', width:120, title: '创建时间'}
+                ,{title: '操作', width:170, templet:'#barDemo',fixed:"right",align:"center"}
             ]]
             ,page: true
-        });*/
+        });
         //监听表格复选框选择
         table.on('checkbox(demo)', function(obj){
             console.log(obj)
@@ -107,6 +111,26 @@
                 });
             }
         });
+        //搜索框
+        $(".search_btn").on("click",function(){
+            //alert(1111)
+            /!*if($(".searchVal").val() != ''){
+                tableIns.reload("idTest",{
+                    page: {
+                        curr: 1
+                    },
+                    where: {
+                        name: $(".searchVal").val()
+                    }
+                })
+            }else{
+                layer.msg("请输入搜索内容");
+            }*!/
+
+            var type = $(this).data('type');
+            active[type] ? active[type].call(this) : '';
+        });
+
 
         var $ = layui.$, active = {
             getCheckData: function(){ //获取选中数据
@@ -122,6 +146,24 @@
             ,isAll: function(){ //验证是否全选
                 var checkStatus = table.checkStatus('idTest');
                 layer.msg(checkStatus.isAll ? '全选': '未全选')
+            }
+        };
+
+        var $ = layui.$, active = {
+            reload: function(){
+                var demoReload = $(".searchVal");
+                alert(123)
+                //执行重载
+                table.reload('idTest', {
+                    page: {
+                        curr: 1 //重新从第 1 页开始
+                    }
+                    ,where: {
+                        key: {
+                            name: demoReload.val()
+                        }
+                    }
+                });
             }
         };
 
@@ -145,9 +187,13 @@
                 }
             });
         });
-    });
+
+    });*/
+
+
 </script>
 
+<table class="layui-table" id="test1" lay-filter="demo"></table>
 <table class="layui-hide" id="test"></table>
 </body>
 </html>
