--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="../static/layui/css/layui.css" th:href="@{/layui/css/layui.css}"></link>
     <link rel="stylesheet" href="http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css" th:href="@{http://cdn.bootcss.com/font-awesome/4.6.0/css/font-awesome.min.css}"></link>
     <script src="../static/js/jquery-3.3.1.js" th:src="@{/js/jquery-3.3.1.js}"></script>
+    <style>
+        .layui-table-box, .layui-table-view{
+            margin-left: 5px;
+            margin-top: 5px;
+        }
+    </style>
 </head>
 <body>
 <!--<div style="margin-top: 20px;margin-left: 20px">
@@ -23,9 +29,7 @@
         <div class="layui-inline">
             <a class="layui-btn layui-btn-normal addNews_btn" id="add-user">添加用户</a>
         </div>
-        <!--<div class="layui-inline">
-            <a class="layui-btn layui-btn-danger layui-btn-normal delAll_btn">批量删除</a>
-        </div>-->
+
     </form>
 </blockquote>
 
