--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,6 +37,9 @@
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/user/list}" href="user/list.html" class="layui-col-md-offset2" target="target"> 客户列表</a></dd>
                     </dl>
+                    <dl class="layui-nav-child">
+                        <dd><a th:href="@{/admin/list}" href="admin/list.html" class="layui-col-md-offset2" target="target"> 管理员列表</a></dd>
+                    </dl>
                 </li>
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon" style="font-size: 18px; color: #e2e2e2;">&#xe62d;</i>产品管理</a>
