--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -53,12 +53,13 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit="submit" lay-filter="formDemo">添加</button>
-                <button type="reset" class="layui-btn layui-btn-primary">取消</button>
+                <button id="cancel" type="reset" class="layui-btn layui-btn-primary">取消</button>
             </div>
         </div>
     </form>
 </div>
 <script src="../../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
+
 <script th:inline="javascript">
     layui.use(['layer','form', 'element'], function () {
         var form = layui.form
@@ -92,7 +93,7 @@
                              //刷新父亲的页面
                              parent.refreshIframe();*/
                             parent.location.href = "/user/list";
-                        }, 800);
+                        }, 1000);
                     } else {
                         console.alert(result.code);
                         layer.msg('eles:保存失败！' + result.msg, {icon: 2, time: 1000});
@@ -106,7 +107,14 @@
             console.log(data.field)
             return false;
         });
+        //取消按钮 关闭弹出层
+        $('#cancel').on('click', function () {
+            var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+            parent.layer.close(index); //再执行关闭
+        });
+
     });
+
 
 
 </script>
