--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -51,7 +51,7 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit="submit" lay-filter="formDemo">修改</button>
-                <button type="reset" class="layui-btn layui-btn-primary">取消</button>
+                <button id="cancel" type="reset" class="layui-btn layui-btn-primary">取消</button>
             </div>
         </div>
     </form>
@@ -95,6 +95,12 @@
             });
             console.log(data.field)
             return false;
+        });
+
+        //取消按钮 关闭弹出层
+        $('#cancel').on('click', function () {
+            var index = parent.layer.getFrameIndex(window.name); //先得到当前iframe层的索引
+            parent.layer.close(index); //再执行关闭
         });
     });
 
