--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test" >
                 <li class="layui-nav-item layui-nav-itemed">
-                    <a class="" href="javascript:;" ><i class="layui-icon" style="font-size: 18px; color: #e2e2e2;">&#xe613;</i> 客户管理</a>
+                    <a class="" href="javascript:;" ><i class="layui-icon" style="font-size: 18px; color: #e2e2e2;">&#xe613;</i> 用户管理</a>
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/user/list}" href="user/list.html" class="layui-col-md-offset2" target="target"> 客户列表</a></dd>
                     </dl>
@@ -65,19 +65,6 @@
     </div>
 
     <div class="layui-body">
-        <!--<div class="layui-tab admin-nav-card layui-tab-brief"
-             lay-filter="admin-tab">
-            <ul class="layui-tab-title">
-                <li class="layui-this"><i class="fa fa-dashboard"
-                                          aria-hidden="true"></i> <cite>首页</cite></li>
-            </ul>
-            <div class="layui-tab-content"
-                 style="min-height: 150px; padding: 5px 0 0 0;">
-                <div class="layui-tab-item layui-show">
-                    &lt;!&ndash;<iframe src="wecome.jsp"></iframe>&ndash;&gt;
-                </div>
-            </div>
-        </div>-->
         <iframe name="target" frameborder="0" id="demoAdmin" style="width: 100%; height: 600px;"></iframe>
     </div>
 
