--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -44,7 +44,7 @@
                 <li class="layui-nav-item">
                     <a href="javascript:;"><i class="layui-icon" style="font-size: 18px; color: #e2e2e2;">&#xe62d;</i>产品管理</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="project/list.html" class="layui-col-md-offset2" target="target">理财项目</a></dd>
+                        <dd><a th:href="@{/project/list}" href="project/list.html" class="layui-col-md-offset2" target="target">理财项目</a></dd>
                         <dd><a href="product/list.html" class="layui-col-md-offset2" target="target">理财产品</a></dd>
                     </dl>
                 </li>
