--- a/src/main/resources/templates/admin/list.html
+++ b/src/main/resources/templates/admin/list.html
@@ -14,46 +14,23 @@
     </style>
 </head>
 <body>
-<!--<div style="margin-top: 20px;margin-left: 20px">
-    <button id="add-user" class="layui-btn">添加用户</button>
-</div>-->
 
 <blockquote class="layui-elem-quote quoteBox">
     <form class="layui-form">
-        <!--<div class="layui-inline">
-            <div class="layui-input-inline">
-                <input type="text" class="layui-input searchVal" placeholder="请输入用户姓名" />
-            </div>
-            <a class="layui-btn search_btn" data-type="reload">搜索</a>
-        </div>-->
+
         <div class="layui-inline">
-            <a class="layui-btn layui-btn-normal addNews_btn" id="add-user">添加用户</a>
+            <a class="layui-btn layui-btn-normal addNews_btn" id="add-user">添加管理员</a>
         </div>
 
     </form>
 </blockquote>
 
-<!--<table class="layui-table" lay-data="{width: 1100, height:500, url:'/user/list1', page:true, id:'idTest'}" lay-filter="demo">
-    <thead>
-    <tr>
-        <th lay-data="{field:'id', width:80, sort: true, fixed: true}">ID</th>
-        <th id="name" lay-data="{field:'name', width:130, sort: true}">姓名</th>
-        <th lay-data="{field:'idCard', width:180}">身份证</th>
-        <th lay-data="{field:'address', width:160, align:'center'}">住址</th>
-        <th lay-data="{field:'account', width:180}">账户</th>
-        <th lay-data="{field:'phone', width:140, sort: true}">电话</th>
-        &lt;!&ndash;<th lay-data="{field:'createTime', width:120}">创建时间</th>&ndash;&gt;
-        <th lay-data="{fixed: 'right', width:200, align:'center', toolbar: '#barDemo'}">操作</th>
-    </tr>
-    </thead>
-</table>-->
 <script type="text/html" id="barDemo">
     <a class="layui-btn layui-btn-primary layui-btn-xs" lay-event="detail">查看</a>
     <a class="layui-btn layui-btn-xs" lay-event="edit" id="edit">编辑</a>
     <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
 </script>
 <script src="../static/layui/layui.js" th:src="@{/layui/layui.js}"></script>
-<!--<script src="../static/js/user/list.js" th:src="@{/js/user/list.js}"></script>-->
 <script th:inline="javascript">
     //JavaScript代码区域
     layui.use(['table','layer'], function(){
