--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="layui-form-item">
-            <label class="layui-form-label"><i class="layui-icon" style="font-size: 18px; color: #e2e2e2;">&#xe62a;</i></label>
+            <label class="layui-form-label"><i class="layui-icon layui-icon-password" style="font-size: 18px; color: #e2e2e2;">&#xe62a;</i></label>
             <div class="layui-input-inline">
                 <input type="password" name="password" required="required" lay-verify="required" placeholder="请输入密码"
                        autocomplete="off" class="layui-input" th:field="*{password}"/>
