--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -28,7 +28,7 @@
         <div class="layui-form-item">
             <div class="layui-input-block">
                 <button class="layui-btn" lay-submit="submit" lay-filter="formDemo">登录</button>
-                <button type="reset" class="layui-btn layui-btn-primary">注册</button>
+                <!--<button type="reset" class="layui-btn layui-btn-primary">注册</button>-->
             </div>
         </div>
     </form>
